candidate-service-new/deployment-gcp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: candidate-service-deployment
  labels:
    app: candidate-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: candidate-service
  template:
    metadata:
      labels:
        app: candidate-service
    spec:
      containers:
        - name: candidate-service
          image: gcr.io/example-project-gke/candidate-service:v1.10
          ports:
            - containerPort: 8080
