candidate-service-new/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: candidate-service
  labels:
    app: candidate-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
  selector:
    app: candidate-service
