candidate-service-new/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
    - host: "test.candidate.example.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: candidate-service
                port:
                  number: 8080
